engagement & schedule batch

--- a/calendar-batch/build.gradle
+++ b/calendar-batch/build.gradle
@@ -19,6 +19,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     testImplementation 'org.springframework.batch:spring-batch-test'
+//    implementation project(path: ":calendar-project")
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation 'mysql:mysql-connector-java'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.30'
+
 }
 
 tasks.named('test') {
