--- a/calendar-api/build.gradle
+++ b/calendar-api/build.gradle
@@ -20,8 +20,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-    implementation project(path: ':')
+    //implementation project(path: ":calendar-project")
+    //implementation project(path: ':')
 }
 
 tasks.named('test') {
