--- a/calendar-core/build.gradle
+++ b/calendar-core/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.18.22'
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.3m'
+    //implementation project(path: ":calendar-project")
     //implementation 'mysql:mysql-connector-java'
 
     runtimeOnly 'com.mysql:mysql-connector-j'
