--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 rootProject.name = 'calendar-project'
-include 'calendar-core'
-include 'calendar-batch'
-include 'calendar-api'
+    include ':calendar-core'
+    include ':calendar-batch'
+    include ':calendar-api'
